[package]
name = "curl_cdn-cgi_trace_rust"
version = "0.1.0"
edition = "2021"
rustc-version = "1.75.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.22"
chrono = "0.4.38"
ipnetwork = "0.20.0"
rand = "0.8.5"
url = "2.5.2"
threadpool = "1.8.1"
fern = "0.6.2"
