[package]
name = "curl_cdn-cgi_trace_rust"
version = "0.1.0"
edition = "2021"
rustc-version = "1.75.0+"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
clap = { version = "4.5.21", features = ["derive"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
reqwest = "0.12"
tokio = { version = "1", features = ["full"] }
threadpool = "1.8.1"
chrono = "0.4.38"
ipnetwork = "0.20.0"
rand = "0.8.5"
url = "2.5.3"
log = "0.4.22"
fern = "0.7.0"
csv = "1.3.1"

# [[bin]]
# name = "app"
# path = "test/demo1.rs"

# [[bin]]
# name = "main"
# path = "src/main.rs"
